navbar not all the way set up

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -2,6 +2,32 @@
   position: absolute;
 }
 
+li {
+  list-style: none;
+}
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.profile-dropdown {
+  display: flex;
+  right: 25px;
+  flex-direction: column;
+  text-align: center;
+  position: absolute;
+  background-color: red;
+  border: 1px solid black;
+  border-radius: 15px;
+  color: #322e3f;
+  padding: 25px;
+  list-style: none;
+}
+.logo-left {
+  width: 100px;
+  height: auto;
+  background-image: url(../../assets/favicon1.ico);
+}
 .hidden {
   display: none;
 }
