--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -4,7 +4,14 @@ body {
   width: 100%;
   height: 100vh;
   /* color: transparent; */
-  background: linear-gradient(-45deg, lime, green, blue, blueviolet, magenta);
+  background: linear-gradient(
+    -45deg,
+    #00b0ff,
+    #00e5ff,
+    #1de9b6,
+    #01579b,
+    #64ffda
+  );
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
   overflow: hidden;
@@ -31,10 +38,10 @@ h1 {
   text-transform: uppercase;
   background-image: linear-gradient(
     to left,
-    #00b0ff,
-    #00e5ff,
-    #1de9b6,
-    #01579b
+    #4527a0,
+    #283593,
+    #1565c0,
+    #5e35b1
   );
   background-clip: text;
   -webkit-background-clip: text;
