--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -30,7 +30,143 @@ body {
   }
 }
 
-h1 {
+.wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  /* overflow: hidden; */
+}
+.wrapper h3 {
+  height: 60px;
+  width: 60px;
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  border-radius: 50px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  animation: bubbling 4s linear infinite;
+}
+h3 .dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 20%;
+  right: 20%;
+}
+.wrapper h3:nth-child(1) {
+  top: 20%;
+  left: 20%;
+  animation: bubbling 8s linear infinite;
+}
+.wrapper h3:nth-child(2) {
+  top: 60%;
+  left: 80%;
+  animation: bubbling 9s linear infinite;
+}
+.wrapper h3:nth-child(3) {
+  top: 40%;
+  left: 40%;
+  animation: bubbling 10s linear infinite;
+}
+.wrapper h3:nth-child(4) {
+  top: 66%;
+  left: 30%;
+  animation: bubbling 4s linear infinite;
+}
+.wrapper h3:nth-child(5) {
+  top: 90%;
+  left: 10%;
+  animation: bubbling 7s linear infinite;
+}
+.wrapper h3:nth-child(6) {
+  top: 45%;
+  left: 50%;
+  animation: bubbling 11s linear infinite;
+}
+.wrapper h3:nth-child(7) {
+  top: 10%;
+  left: 90%;
+  animation: bubbling 6s linear infinite;
+}
+.wrapper h3:nth-child(8) {
+  top: 20%;
+  left: 70%;
+  animation: bubbling 8s linear infinite;
+}
+.wrapper h3:nth-child(9) {
+  top: 30%;
+  left: 20%;
+  animation: bubbling 3s linear infinite;
+}
+.wrapper h3:nth-child(10) {
+  top: 48%;
+  left: 70%;
+  animation: bubbling 9s linear infinite;
+}
+.wrapper h3:nth-child(11) {
+  top: 35%;
+  left: 60%;
+  animation: bubbling 7s linear infinite;
+}
+.wrapper h3:nth-child(12) {
+  top: 60%;
+  left: 5%;
+  animation: bubbling 8s linear infinite;
+}
+.wrapper h3:nth-child(13) {
+  top: 85%;
+  left: 15%;
+  animation: bubbling 5s linear infinite;
+}
+.wrapper h3:nth-child(14) {
+  top: 90%;
+  left: 80%;
+  animation: bubbling 13s linear infinite;
+}
+.wrapper h3:nth-child(15) {
+  top: 31%;
+  left: 37%;
+  animation: bubbling 4.5s linear infinite;
+}
+.wrapper h3:nth-child(16) {
+  top: 5%;
+  left: 69%;
+  animation: bubbling 8s linear infinite;
+}
+.wrapper h3:nth-child(17) {
+  top: 15%;
+  left: 55%;
+  animation: bubbling 3.8s linear infinite;
+}
+.wrapper h3:nth-child(18) {
+  top: 43%;
+  left: 80%;
+  animation: bubbling 8.9s linear infinite;
+}
+.wrapper h3:nth-child(19) {
+  top: 83%;
+  left: 16%;
+  animation: bubbling 7.6s linear infinite;
+}
+.wrapper h3:nth-child(20) {
+  top: 24%;
+  left: 64%;
+  animation: bubbling 3.7s linear infinite;
+}
+
+@keyframes bubbling {
+  0% {
+    transform: scale(0) translateY(0) rotate(70deg);
+  }
+  100% {
+    transform: scale(1.3) translateY(-100px) rotate(360deg);
+  }
+}
+
+h1.progress {
   margin: 0;
   line-height: 1;
   font-size: 4em;
@@ -62,4 +198,49 @@ h1 {
   100% {
     background-position: 0% 100%;
   }
+}
+
+.scroll-bg {
+  /* background: goldenrod; */
+  width: 100%;
+  margin: 1% auto;
+}
+.scroll-div {
+  width: 100%;
+  /* background: goldenrod; */
+  height: 100px;
+  overflow: hidden;
+  overflow-y: scroll;
+  border-radius: 50px;
+}
+.scroll-object {
+  color: wheat;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.item-selector {
+  overflow-x: auto;
+  white-space: nowrap;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  color: #095417;
+}
+.item {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 300px;
+  margin-right: 10px;
+  background-color: #f2f2f2;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* overflow: scroll; */
+  overflow-x: scroll;
+  /* text-overflow: scroll; */
 }
