--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100vh;
-  /* color: transparent; */
+  background-size: cover;
   background: linear-gradient(
     -45deg,
     #00b0ff,
@@ -13,6 +13,10 @@ body {
     #64ffda
   );
   background-size: 400% 400%;
+  /* background-size: cover; */
+  /* background-image: url(../../assets/goo.png),
+    linear-gradient(-45deg, #00b0ff, #00e5ff, #1de9b6, #01579b, #64ffda);
+  background-repeat: no-repeat; */
   animation: gradientBG 10s ease infinite;
   overflow: hidden;
   overflow-y: scroll;
