--- a/react-app/public/mainbody.css
+++ b/react-app/public/mainbody.css
@@ -4,11 +4,12 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   height: 100vh;
-  cursor: none;
+  /* cursor: none; */
 }
-
+/*
 .cursor {
   z-index: 999;
   position: fixed;
@@ -40,4 +41,61 @@ body {
   opacity: 0.2;
   transform: translate(-30%, -30%);
   border-radius: 50%;
+} */
+
+.cursor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 10;
 }
+
+.site-wide {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid white;
+  z-index: 10;
+}
+
+.site-wide .pointer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: white;
+  transition: width 0.1s ease-in-out, height 0.1s ease-in-out;
+  z-index: 10;
+}
+
+.site-wide.active .pointer {
+  width: 20px;
+  height: 20px;
+}
+
+/* .homediv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.cursorhome {
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-position: top left;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: width 0.1s ease-in-out, height 0.1s ease-in-out;
+}
+
+.cursorhome.active {
+  width: 75px;
+  height: 75px;
+} */
