--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -21,6 +21,7 @@ li {
 .profile-dropdown {
   display: flex;
   right: 25px;
+  position: absolute;
   flex-direction: column;
   text-align: center;
   position: absolute;
@@ -30,7 +31,7 @@ li {
   color: #322e3f;
   padding: 25px;
   list-style: none;
-  z-index: 2;
+  z-index: 10;
 }
 .logo-left {
   width: 100px;
