edit reviews broken now

--- a/react-app/public/mainbody.css
+++ b/react-app/public/mainbody.css
@@ -42,7 +42,7 @@ body {
   transform: translate(-30%, -30%);
   border-radius: 50%;
 } */
-
+/*
 .cursor {
   position: absolute;
   top: 0;
@@ -75,7 +75,7 @@ body {
 .site-wide.active .pointer {
   width: 20px;
   height: 20px;
-}
+} */
 
 /* .homediv {
   width: 100%;
