--- a/react-app/src/components/AnimePage/animePage.css
+++ b/react-app/src/components/AnimePage/animePage.css
@@ -1,5 +1,5 @@
 .individual-post {
-  background-image: url(https://res.cloudinary.com/dpdvw1sam/image/upload/v1701797258/slime_hgxhzv.webp);
+  /* background-image: url("target.image"); */
   width: 100%;
   background-repeat: no-repeat;
   display: flex;
