--- a/react-app/src/components/LandingPage/landingpage.css
+++ b/react-app/src/components/LandingPage/landingpage.css
@@ -38,13 +38,13 @@
   position: relative;
   left: -20px;
   transition: all 0.3s ease 0s;
-  /* box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.1);
-  background-color: #fff; */
+  box-shadow: 16px 20px 25px #2196f3;
+  transition: all 0.3s ease 0s;
   background: linear-gradient(to right, #bb86fc 0%, #6200ee 51%, #3700b3 100%);
 }
 #landing-btn:hover {
   background: linear-gradient(to right, #bbdefb 00, #2196f3 51%, #1a237e 100%);
-  /* box-shadow: 0px 15px 20px red(46, 229, 157, 0.4); */
+  box-shadow: 16px 20px 25px #3700b3;
   transform: translateY(-7px);
 }
 
