--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -62,8 +62,6 @@ a:visited {
   width: 100%;
 }
 .profile-buttons button {
-  margin: 10px;
-  padding: 30px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -75,9 +73,35 @@ a:visited {
 }
 button.logout {
   width: 98%;
-  height: 100%;
+  height: 60%;
+  margin: 10px 0;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 8px 8px 15px rgba(1, 144, 226, 0.8);
+  transition: all 0.3s ease 0s;
 }
 button.create-post {
   width: 98%;
-  height: 100%;
+  height: 60%;
+  margin: 10px 0;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 8px 8px 15px rgba(1, 144, 226, 0.8);
+  transition: all 0.3s ease 0s;
+}
+button.logout:hover {
+  background-color: #2ee59d;
+  box-shadow: 8px 15px 20px rgba(46, 229, 157, 0.8);
+  color: #fff;
+  transform: translateY(-7px);
+}
+button.create-post:hover {
+  background-color: #2ee59d;
+  box-shadow: 8px 15px 20px rgba(46, 229, 157, 0.8);
+  color: #fff;
+  transform: translateY(-7px);
 }
