--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -172,10 +172,10 @@ h1.progress {
   text-transform: uppercase;
   background-image: linear-gradient(
     to left,
-    #4527a0,
-    #283593,
-    #1565c0,
-    #5e35b1
+    #fff176,
+    #ffff00,
+    #76ff03,
+    #b2ff59
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -261,13 +261,16 @@ h1.progress {
   color: white;
 }
 
-/* .fancy {
+.fancy {
   color: white;
-  transition: all 1s ease;
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  /* transition: all 1s ease;
   transform: translateY(50px);
   display: inline-block;
-  animation: colors 5s infinite;
-} */
+  animation: colors 5s infinite; */
+}
 
 /* @keyframes colors {
   0% {
