--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -17,6 +17,8 @@
   left: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
 }
 
 #modal-content {
