--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -1,4 +1,4 @@
-/* .signup-modal {
+.signup-modal {
   width: 300px;
   height: 300px;
   display: flex;
@@ -7,4 +7,72 @@
   align-items: center;
   background: rgb(0, 179, 255);
   box-shadow: 8px 16px 30px rgba(1, 144, 266, 0.8);
-} */
+}
+.post-inputs {
+  height: 20px;
+  border: none;
+}
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.email-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.username-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.firstname-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.lastname-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.admin-key-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.signup-password-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.confirm-box {
+  position: relative;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.floating-fillers {
+  position: absolute;
+  pointer-events: none;
+  top: 1px;
+  left: 10px;
+}
+.post-inputs:focus + .floating-fillers {
+  top: -10.5px;
+}
