--- a/react-app/src/components/SignupFormPage/SignupFormPage.css
+++ b/react-app/src/components/SignupFormPage/SignupFormPage.css
@@ -1,15 +1,15 @@
-.signup-modal {
-  width: 300px;
-  height: 500px;
+.signup-page {
+  width: 100%;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: rgb(0, 179, 255);
-  box-shadow: 20px 25px 40px rgba(1, 144, 266, 0.8);
+  box-shadow: 8px 16px 30px rgba(1, 144, 266, 0.8);
 }
-.post-inputs {
-  height: 20px;
+.post-inputs-signup-page {
+  height: 30px;
   border: none;
 }
 form {
@@ -18,66 +18,66 @@ form {
   flex-direction: column;
   align-items: center;
 }
-.email-box {
+.email-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.username-box {
+.username-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.firstname-box {
+.firstname-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.lastname-box {
+.lastname-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.admin-key-box {
+.admin-key-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.signup-password-box {
+.signup-password-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.confirm-box {
+.confirm-box-page {
   position: relative;
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.floating-fillers {
+.floating-fillers-signup-page {
   position: absolute;
   pointer-events: none;
   top: 1px;
-  left: 10px;
+  left: 50px;
 }
-.post-inputs:focus + .floating-fillers {
+.post-inputs-signup-page:focus + .floating-fillers-signup-page {
   top: -10.5px;
 }
 
-.sign-up-button {
+.sign-up-button-page {
   width: 90%;
   display: flex;
   justify-content: center;
@@ -93,7 +93,7 @@ form {
   transition: all 0.3s ease 0s;
 }
 
-.sign-up-button:hover {
+.sign-up-button-page:hover {
   background: rgb(13, 255, 0);
   box-shadow: 8px 8px 15px rgba(13, 255, 0, 0.8);
   transform: translateY(-7px);
