--- a/react-app/src/components/PostForm/postFormStyles.css
+++ b/react-app/src/components/PostForm/postFormStyles.css
@@ -1,4 +1,4 @@
-.form-page {
+.post-form-page {
   height: 500px;
   display: flex;
   flex-direction: column;
@@ -6,32 +6,53 @@
   margin-top: 55px;
 }
 
-.form-container {
+.post-form-container {
   width: 600px;
   height: 500px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   border: 1px solid gray;
-  box-shadow: 3px 3px 2px lightgray;
+  box-shadow: 15px 25px 40px rgb(157, 255, 0, 0.8);
   margin: 15px 0 15px 0;
-  background-color: whitesmoke;
+  background-color: rgb(0, 255, 42);
 }
 
-.form-header {
+.post-form-header {
   color: black;
   font-family: Billabong;
   font-size: 3em;
 }
 
-.form-input-box {
+.title-input-box {
   margin-top: 10px;
+  height: 40px;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.description-input-box {
+  margin-top: 10px;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.form-label {
-  font-size: 1.17em;
-  font-weight: bold;
-  margin-right: 7px;
+.floating-fillers-post {
+  position: absolute;
+  pointer-events: none;
+  /* font-size: 45px; */
+  top: -1px;
+  left: 35px;
+}
+input {
+  width: 90%;
+}
+textarea {
+  width: 90%;
 }
 
 .button {
