--- a/react-app/src/components/Reviews/reviews.css
+++ b/react-app/src/components/Reviews/reviews.css
@@ -18,6 +18,7 @@
 .add-review-button-outside-container {
   display: flex;
   justify-content: center;
+  margin-bottom: 30px;
 }
 
 .add-review-button-container button {
@@ -27,7 +28,7 @@
 }
 .add-review-button-container button:hover {
   background-color: rgb(0, 191, 0);
-  box-shadow: 8px 15px 20px rgba(0, 255, 8, 0.8);
+  box-shadow: 8px 15px 20px rgb(0, 255, 8);
   color: #fff;
   cursor: pointer;
 }
