--- a/react-app/src/components/Reviews/reviews.css
+++ b/react-app/src/components/Reviews/reviews.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   color: white;
+  font-size: 25px;
+  margin: 10px 0;
 }
 
 .insideman {
@@ -31,4 +33,41 @@
   box-shadow: 8px 15px 20px rgb(0, 255, 8);
   color: #fff;
   cursor: pointer;
+}
+.reviews-object {
+  display: flex;
+  border-bottom: 1px solid grey;
+  padding: 5px;
+  flex-direction: row;
+  width: 100%;
+}
+.reviews-buttons-container {
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
+}
+.reviews-buttons-container .delete-review button {
+  background: rgb(214, 24, 24);
+  margin: 2px 0;
+}
+.reviews-buttons-container .edit-review button {
+  background: turquoise;
+  margin: 2px 0;
+}
+.reviews-buttons-container .delete-review button:hover {
+  background: rgb(255, 0, 0);
+  cursor: pointer;
+}
+.reviews-buttons-container .edit-review button:hover {
+  background: rgb(7, 255, 230);
+  cursor: pointer;
+}
+.edit-review {
+  display: flex;
+  align-items: center;
+}
+.delete-review {
+  display: flex;
+  align-items: center;
 }
