--- a/react-app/src/components/EditPostForm/editPost.css
+++ b/react-app/src/components/EditPostForm/editPost.css
@@ -1,54 +1,192 @@
-.form-page {
-  height: 95vh;
+.post-form-page {
+  /* height: 500px; */
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 55px;
+  border: 1px solid gray;
+  box-shadow: 15px 25px 40px rgb(157, 255, 0, 0.8);
+  /* margin: 15px 0 15px 0; */
+  background-color: rgb(0, 255, 42);
+  /* width: 600px; */
+  height: 500px;
 }
 
-.form-container {
-  width: 600px;
-  height: auto;
+form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.post-form-container {
+  width: 600px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border: 1px solid gray;
-  box-shadow: 3px 3px 2px lightgray;
+  box-shadow: 15px 25px 40px rgb(157, 255, 0, 0.8);
   margin: 15px 0 15px 0;
-  background-color: whitesmoke;
+  background-color: rgb(0, 255, 42);
 }
 
-.form-header {
+.post-form-header {
   color: black;
   font-family: Billabong;
   font-size: 3em;
 }
 
-.form-input-box {
+.title-input-box {
   margin-top: 10px;
+  height: 40px;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.description-input-box {
+  margin-top: 20px;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.form-label {
-  font-size: 1.17em;
-  font-weight: bold;
-  margin-right: 7px;
+.floating-fillers-post {
+  position: absolute;
+  pointer-events: none;
+  /* font-size: 45px; */
+  top: 7px;
+  left: 100px;
+}
+input {
+  width: 90%;
+  border: none;
+}
+#title {
+  border-radius: 15px;
+}
+textarea {
+  width: 90%;
+  border: none;
+  border-radius: 15px;
+  left: 10px;
+}
+label {
+  font-weight: 700;
 }
 
-.button {
+.new-post-button {
   color: black;
-  font-family: Helvetica;
-  font-size: 1.2em;
+  font-family: Billabong;
+  font-size: 20px;
   font-weight: 600;
   text-decoration: none;
-  height: 1.7em;
-  width: 6em;
-  border: 2px solid black;
+  height: 40px;
+  width: 50%;
+  border: none;
+  background: rgb(0, 200, 255);
+  box-shadow: 10px 15px 20px rgba(0, 13, 255, 0.8);
   border-radius: 15px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 1px;
+  transition: all 0.3s ease 0s;
+}
+.new-post-button:hover {
+  background: rgb(0, 255, 217);
+  box-shadow: 10px 15px 20px rgba(125, 23, 234, 0.8);
+  transform: translateY(-7px);
+  cursor: point;
 }
 
 .errors-info {
   color: red;
   font-weight: bold;
+}
+
+.file-inputs-container {
+  position: relative; /* This allows the elements within it to be positioned without taking this element out of the document flow. As it's parent is NOT positioned, it only effects the children. */
+  display: flex;
+  width: 90%;
+  margin-top: 40px;
+  flex-direction: row;
+}
+
+#post-image-input {
+  visibility: hidden;
+  /* Here we make the default file input button invisible on the page.
+     As the label for this input is connected to it using the htmlFor property, we can style the label as a button instead, and have it behave the same as the <input type="file" />
+     This extra step is necessary as the default <input type="file" /> CANNOT be styled with CSS!!
+  */
+}
+
+/*
+  Important note here is that the element is positioned "absolute".
+  You will need to adjust the top and left properties to get the label to appear where you want it on your page.
+ */
+
+.file-inputs-filename {
+  position: absolute;
+  top: 40px;
+  left: 144px;
+  z-index: 2;
+  color: var(--minimal-border);
+  background-color: var(--minimal-background);
+  font-size: 14px;
+  min-width: 90px;
+  padding-bottom: 2px;
+}
+
+/*
+  This label was added to clarify for the user that uploading an image is OPTIONAL.
+  Feel free to implement this anyway that makes sense for you. Including NOT doing it!!
+*/
+
+/* .file-inputs-optional {
+  position: absolute;
+  font-size: 20px;
+  color: red;
+  top: 40px;
+  left: 240px;
+} */
+
+/*
+  Here we set fixed dimensions for the thumbnail. Size it to your liking!
+  Positioning for this element has been done inline, in the hopes of making this class more re-usable.
+  Feel free to position it in the CSS file if it suits your aims.
+*/
+
+.thumbnails {
+  width: 100px;
+  height: 100px;
+  outline: none;
+}
+
+/*
+  The 2 directives below style our label like a button and give it a nice on hover effect.
+*/
+
+.file-input-labels {
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid rgb(0, 13, 255); */
+  border-radius: 15px;
+  background: rgb(0, 13, 255);
+  box-shadow: 10px 15px 20px rgb(0, 200, 255, 0.8);
+  width: 124px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 7px;
+  transition: all 0.3s ease-in-out;
+}
+
+.file-input-labels:hover {
+  color: white;
+  background: rgba(125, 23, 234);
+  box-shadow: 15px 25px 40px rgba(0, 255, 217, 0.8);
+  cursor: pointer;
 }
