--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -7,6 +7,7 @@
   align-items: center;
   background: rgb(83, 225, 47);
   box-shadow: 20px 25px 40px rgba(21, 255, 0, 0.8);
+  border-radius: 15px;
 }
 .post-inputs {
   height: 20px;
