--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -7,6 +7,7 @@
   align-items: center;
   background: rgb(0, 179, 255);
   box-shadow: 20px 25px 40px rgba(1, 144, 266, 0.8);
+  border-radius: 15px;
 }
 .post-inputs {
   height: 20px;
