--- a/react-app/src/components/AnimePage/animePage.css
+++ b/react-app/src/components/AnimePage/animePage.css
@@ -103,3 +103,42 @@
   justify-content: center;
   width: 100%;
 }
+
+.no-anime-here h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 60px;
+  color: white;
+}
+.no-anime-here h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  color: white;
+  margin: 20px;
+}
+
+.return-back-home-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
+
+.return-back-home-button button {
+  width: 20%;
+  padding: 10px;
+  margin: 10px;
+  border: none;
+  border-radius: 15px;
+  background: green;
+  box-shadow: 10px 15px 25px rgb(144, 238, 144, 0.8);
+  transition: all 0.3s ease 0s;
+  color: white;
+}
+.return-back-home-button button:hover {
+  background: rgb(18, 210, 18);
+  box-shadow: 10px 15px 25px #6eff7f;
+  transform: translateY(-5px);
+  cursor: pointer;
+}
