--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -33,6 +33,9 @@ li {
   z-index: 10;
   box-shadow: 0px 15px 20px #388e3c(46, 229, 157, 0.4);
 }
+.prof-module button:hover {
+  cursor: pointer;
+}
 .logo-left {
   width: 100px;
   height: auto;
@@ -98,12 +101,14 @@ button.logout:hover {
   box-shadow: 8px 15px 20px rgba(46, 229, 157, 0.8);
   color: #fff;
   transform: translateY(-7px);
+  cursor: pointer;
 }
 button.create-post:hover {
   background-color: #2ee59d;
   box-shadow: 8px 15px 20px rgba(46, 229, 157, 0.8);
   color: #fff;
   transform: translateY(-7px);
+  cursor: pointer;
 }
 .profile-enter {
   display: flex;
