--- a/react-app/src/components/NotFound/notFound.css
+++ b/react-app/src/components/NotFound/notFound.css
@@ -16,13 +16,29 @@ video {
 
 .video-content {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 15px;
+  font-size: 30px;
+  align-items: center;
   width: 100%;
   height: 100%;
-  top: 0;
-  display: flex;
-  justify-content: column;
-  align-items: center;
   color: white;
+}
+.video-content button {
+  background: darkred;
+  box-shadow: 12px 20px 30px red;
+  width: 25%;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  transition: all 0.3s ease 0s;
+}
+.video-content button:hover {
+  background: red;
+  box-shadow: 12px 20px 30px darkred;
+  cursor: pointer;
 }
 
 .video-overlay {
