cant find it working

--- a/react-app/src/components/LandingPage/landingpage.css
+++ b/react-app/src/components/LandingPage/landingpage.css
@@ -26,6 +26,8 @@
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
+  /* text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   border: none;
 }
@@ -37,15 +39,20 @@
   cursor: pointer;
   position: relative;
   left: -20px;
-  transition: all 0.3s ease 0s;
-  box-shadow: 16px 20px 25px #2196f3;
-  transition: all 0.3s ease 0s;
-  background: linear-gradient(to right, #bb86fc 0%, #6200ee 51%, #3700b3 100%);
+  background-image: linear-gradient(
+    to right,
+    #bb86fc 0%,
+    #6200ee 51%,
+    #3700b3 100%
+  );
 }
 #landing-btn:hover {
-  background: linear-gradient(to right, #bbdefb 00, #2196f3 51%, #1a237e 100%);
-  box-shadow: 16px 20px 25px #3700b3;
-  transform: translateY(-7px);
+  background-image: linear-gradient(
+    to right,
+    #bbdefb 00,
+    #2196f3 51%,
+    #1a237e 100%
+  );
 }
 
 /* #landing-btn:hover {
