--- a/react-app/src/components/SignupFormPage/SignupFormPage.css
+++ b/react-app/src/components/SignupFormPage/SignupFormPage.css
@@ -98,3 +98,7 @@ form {
   box-shadow: 8px 8px 15px rgba(13, 255, 0, 0.8);
   transform: translateY(-7px);
 }
+
+.span-error-spage {
+  height: 15px;
+}
