modals restyled with padding

--- a/react-app/src/components/EditPostForm/editPost.css
+++ b/react-app/src/components/EditPostForm/editPost.css
@@ -64,6 +64,12 @@ input {
   width: 90%;
   border: none;
 }
+input.post-inputs {
+  padding: 10px;
+}
+.post-inputs-description {
+  padding: 10px;
+}
 #title {
   border-radius: 15px;
 }
