--- a/react-app/src/components/PostForm/postFormStyles.css
+++ b/react-app/src/components/PostForm/postFormStyles.css
@@ -38,9 +38,6 @@ form {
   font-size: 3em;
   margin: 5px;
 }
-#title {
-  padding: 0 0 0 40px;
-}
 
 .title-input-box {
   margin-top: 10px;
@@ -75,6 +72,12 @@ form {
 input {
   width: 90%;
   border: none;
+}
+input.post-inputs {
+  padding: 10px;
+}
+.post-inputs-description {
+  padding: 10px;
 }
 #title {
   border-radius: 15px;
