--- a/react-app/src/components/CreateReviewModal/createReviewModal.css
+++ b/react-app/src/components/CreateReviewModal/createReviewModal.css
@@ -1,8 +1,9 @@
 .add-review-container {
   background: limegreen;
   width: 500px;
-  height: 400px;
+  height: 450px;
   display: flex;
+  border-radius: 15px;
   align-items: center;
   color: white;
   justify-content: center;
@@ -40,7 +41,9 @@
 }
 .textarea {
   width: 90%;
+  padding: 10px;
 }
+
 .textarea.textarea {
   display: flex;
   justify-content: center;
