login and signup page inputs have padding

--- a/react-app/src/components/SignupFormPage/SignupFormPage.css
+++ b/react-app/src/components/SignupFormPage/SignupFormPage.css
@@ -1,6 +1,6 @@
 .signup-page {
   width: 100%;
-  height: 60vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,7 +11,9 @@
 .post-inputs-signup-page {
   height: 30px;
   border: none;
+  padding: 10px;
 }
+
 form {
   width: 100%;
   display: flex;
