error handling fixed for the post creation and update

--- a/react-app/src/components/EditPostForm/editPost.css
+++ b/react-app/src/components/EditPostForm/editPost.css
@@ -164,8 +164,10 @@ label {
 */
 
 .thumbnails {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: -45px;
   outline: none;
 }
 
