--- a/react-app/src/components/PostForm/postFormStyles.css
+++ b/react-app/src/components/PostForm/postFormStyles.css
@@ -10,7 +10,7 @@ div.post-form-page {
   /* margin: 15px 0 15px 0; */
   background-color: rgb(0, 255, 42);
   /* width: 600px; */
-  height: 600px;
+  height: 650px;
 }
 
 form {
@@ -176,6 +176,8 @@ label {
   width: 100px;
   height: 100px;
   outline: none;
+  border: 3px solid black;
+  top: -55px;
 }
 
 /*
