--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -153,3 +153,38 @@ button.create-post:hover {
   transform: translateY(-7px);
   cursor: pointer;
 }
+.view-profile {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+.view-profile button {
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  background-color: #2196f3;
+  border-radius: 10px;
+  border: none;
+}
+button.profileB {
+  width: 100%;
+  height: 50%;
+  margin: -5px 0 0 0;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 8px 8px 15px rgba(1, 144, 226, 0.8);
+  transition: all 0.3s ease 0s;
+}
+button.profileB:hover {
+  background-color: #2ee59d;
+  box-shadow: 8px 15px 20px rgba(46, 229, 157, 0.8);
+  color: #fff;
+  transform: translateY(-7px);
+  cursor: pointer;
+}
