this multiple select is no Joke

--- a/react-app/src/components/AnimePage/animePage.css
+++ b/react-app/src/components/AnimePage/animePage.css
@@ -153,3 +153,12 @@
 .fa-fa-fa {
   cursor: pointer;
 }
+.cat-div {
+  margin: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: yellow;
+  font-size: 20px;
+}
